# mlops_e1

./: README.md  hello.py  main.py  ml_model.py  post_data.py  pyproject.toml  requirements.txt  test.ipynb
