[tool.poetry]
name = "mlops-e1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = { version = ">=0.115.7", extras = ["standard"] }
websockets = ">=14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
