[tool.poetry]
name = "mlops-e1"
version = "0.1.0"
description = "A test app project"
readme = "README.md"
authors = ["Miroslav Ivanov miivanov@edu.lapinamk.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = { version = ">=0.115.7", extras = ["standard"] }
websockets = ">=14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
